--- a/index.html
+++ b/index.html
@@ -46,14 +46,72 @@ textarea,input,button{font-size:16px}textarea{width:100%;height:180px}
 
 <script>
 /* === Replace with your real values when ready === */
-const SALT = "mc-demo-salt"; // replace with your salt
+const SALT = "einstein1905"; // replace with your salt
 // Demo key: A, C, D, B, B — replace with your hashedKey later
 const hashedKey = [
-  ["f2f2b8ff2d5f2e7c77a1c2ff2c8d1b3e7d1b9b9d3d6d1f1a8d6a9e51bf6c7a1e"],
-  ["2b8d8c3e2a65f4f5c8a8a7b5f0f8e8e5a7c6b3f5d9e1c3a2b5c7d9e1f0a2b3c4"],
-  ["4cdf1b2a8e1f9d7c6b5a4e3d2c1b0a9f8e7d6c5b4a39281706f5e4d3c2b1a0f9"],
-  ["f8f0e1d2c3b4a5968778695a4b3c2d1e0f1a2b3c4d5e6f708192a3b4c5d6e7f8"],
-  ["7aa5c6d8e9f0a1b2c3d4e5f61728394a5b6c7d8e9f00112233445566778899aa"]
+[
+      "a37efab0d5e90efd66f50d9b3268ce4b31dc50a487a49a26e203a0f403a373ca"
+    ],
+    [
+      "97282faa3f315740a5fb8451c7be8d616060af892b76a5f4dd3cd7cf6928b8c8"
+    ],
+    [
+      "a3844da5499aaaf3eeda48eb6df9f71a11b6857448b57effe3d236f1f4411b28"
+    ],
+    [
+      "42d4c1fcbcf48f6652a535974a45f6ebaa994c98f2817cc83800bd507aa44e92"
+    ],
+    [
+      "97282faa3f315740a5fb8451c7be8d616060af892b76a5f4dd3cd7cf6928b8c8"
+    ],
+    [
+      "97282faa3f315740a5fb8451c7be8d616060af892b76a5f4dd3cd7cf6928b8c8"
+    ],
+    [
+      "a37efab0d5e90efd66f50d9b3268ce4b31dc50a487a49a26e203a0f403a373ca"
+    ],
+    [
+      "a3844da5499aaaf3eeda48eb6df9f71a11b6857448b57effe3d236f1f4411b28"
+    ],
+    [
+      "42d4c1fcbcf48f6652a535974a45f6ebaa994c98f2817cc83800bd507aa44e92"
+    ],
+    [
+      "97282faa3f315740a5fb8451c7be8d616060af892b76a5f4dd3cd7cf6928b8c8"
+    ],
+    [
+      "97282faa3f315740a5fb8451c7be8d616060af892b76a5f4dd3cd7cf6928b8c8"
+    ],
+    [
+      "97282faa3f315740a5fb8451c7be8d616060af892b76a5f4dd3cd7cf6928b8c8"
+    ],
+    [
+      "42d4c1fcbcf48f6652a535974a45f6ebaa994c98f2817cc83800bd507aa44e92"
+    ],
+    [
+      "a3844da5499aaaf3eeda48eb6df9f71a11b6857448b57effe3d236f1f4411b28"
+    ],
+    [
+      "a37efab0d5e90efd66f50d9b3268ce4b31dc50a487a49a26e203a0f403a373ca"
+    ],
+    [
+      "42d4c1fcbcf48f6652a535974a45f6ebaa994c98f2817cc83800bd507aa44e92"
+    ],
+    [
+      "a3844da5499aaaf3eeda48eb6df9f71a11b6857448b57effe3d236f1f4411b28"
+    ],
+    [
+      "97282faa3f315740a5fb8451c7be8d616060af892b76a5f4dd3cd7cf6928b8c8"
+    ],
+    [
+      "a37efab0d5e90efd66f50d9b3268ce4b31dc50a487a49a26e203a0f403a373ca"
+    ],
+    [
+      "a37efab0d5e90efd66f50d9b3268ce4b31dc50a487a49a26e203a0f403a373ca"
+    ],
+    [
+      "a37efab0d5e90efd66f50d9b3268ce4b31dc50a487a49a26e203a0f403a373ca"
+    ]
 ];
 /* ================================================ */
 
